Small bug fixes + cell spacing support

--- a/java/html/style.css
+++ b/java/html/style.css
@@ -4,10 +4,11 @@ a:visited    { color: #009999; background-color: transparent; font-weight:bold }
 a:hover      { color: #0000ff; background-color: transparent }
 body, table, p, ul, li, td  { font-family: Arial, helvetica, sans-serif;
 			      font-size: "100%";  color: "black" }
-th              { font-family: Arial, helvetica, sans-serif;
+
+th              { font-family: helvetica, Arial, sans-serif;
                   color: white;
-		  background-color: #000080;
-		  border-color: #000080;
+		  background-color: #008000;
+		  border-color: #008000;
 		  font-weight: bold }
 
 body { background-color: #d0ffe8 }
@@ -15,7 +16,8 @@ table { background-color: #e0fff0 }
 table.matrix {background-color: #e0f0ff}
 table.form {background-color: transparent}
 table.createForm {border-style: solid; border-color: #b0dfc8; border-width: 1}
-table.ballot {border-style: solid; border-color: #b0dfc8; border-width: 1}
+table.ballot { border-style: solid; padding: 1; border-color: #b0dfc8; border-width: 1}
+table.ballot thead tr th { background-color: #008000 }
 
 .emailAddr {font-family: Courier New, Courier, fixed}
 .electionTitle {font-weight: bold}
